# PersonalAIProject

./: .env  .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md
prompts/: system_agent.md
src/: sitecustomize.py
src/qwopus_agent/: __init__.py  cli.py
src/qwopus_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/qwopus_agent/agent/: __init__.py  executor.py  loop.py  planner.py
src/qwopus_agent/agents/: __init__.py  executor.py  planner.py  router.py
src/qwopus_agent/analysis/: __init__.py  document_analysis.py  excel_processing.py
src/qwopus_agent/documents/: __init__.py  mineru.py  parser.py  storage.py
src/qwopus_agent/integrations/: __init__.py  smolagents_runtime.py  smolagents_smoke.py
src/qwopus_agent/llm/: __init__.py  base.py  config.py  local_mlx.py  openai_compatible.py  registry.py
src/qwopus_agent/memory/: __init__.py  minirag.py
src/qwopus_agent/prompts/: __init__.py
src/qwopus_agent/reflection/: __init__.py
src/qwopus_agent/reports/: __init__.py
src/qwopus_agent/services/: __init__.py  analysis_service.py
src/qwopus_agent/skills/: __init__.py  base.py  document_parser.py  excel_analysis.py  excel_schema.py  rag_search.py  registry.py  web_search.py
tests/: test_agent_loop.py  test_agents_architecture.py  test_analysis_service.py  test_builtin_skills.py  test_conversation_log.py  test_document_analysis.py  test_llm_contract.py  test_llm_registry.py  test_minirag.py  test_skill_discovery.py  test_skill_registry.py  test_smolagents_runtime.py  test_tool_registry.py
(+7 files in other folders)
